yml/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: t02-cloud-security
