yml/pod-allowed.yaml
# pod-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: t02-cloud-security
  labels:
    role: authorized
spec:
  containers:
    - name: allowed
      image: busybox
      command: ["sleep", "3600"]
