yml/pod-denied.yaml
# pod-denied.yaml
apiVersion: v1
kind: Pod
metadata:
  name: denied
  namespace: t02-cloud-security
  labels:
    role: denied
spec:
  containers:
    - name: denied
      image: busybox
      command: ["sleep", "3600"]
