yml/service-web-app.yaml
# service-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: t02-cloud-security
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
