yml/networkpolicy-allow-authorized.yaml
# networkpolicy-allow-authorized.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authorized-pods
  namespace: t02-cloud-security
spec:
  podSelector:
    matchLabels:
      app: web-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: authorized
      ports:
        - protocol: TCP
          port: 80
