yml/networkpolicy-deny-all.yaml
# networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: t02-cloud-security
spec:
  podSelector:
    matchLabels:
      app: web-app
  policyTypes:
    - Ingress
